[gd_scene load_steps=16 format=3 uid="uid://b1dcv31ty4qix"]

[ext_resource type="Script" path="res://scripts/managers/wave_manager.gd" id="1_0e48y"]
[ext_resource type="Script" path="res://scripts/level_controller.gd" id="1_level_controller"]
[ext_resource type="PackedScene" path="res://scenes/enemies/goblin_scout.tscn" id="1_wtcfe"]
[ext_resource type="Script" path="res://scripts/camera/camera_controller_improved.gd" id="2_camera"]
[ext_resource type="PackedScene" path="res://scenes/enemies/orc_warrior.tscn" id="3_epypp"]
[ext_resource type="PackedScene" path="res://scenes/enemies/wolf_runner.tscn" id="3_wolf"]
[ext_resource type="PackedScene" path="res://scenes/enemies/troll_boss.tscn" id="4_troll"]
[ext_resource type="PackedScene" path="res://scenes/enemies/bat_flyer.tscn" id="5_bat"]
[ext_resource type="Script" path="res://scripts/ui/ui.gd" id="4_q6r6c"]
[ext_resource type="Script" path="res://scripts/managers/placement_manager.gd" id="5_kdubu"]
[ext_resource type="PackedScene" path="res://scenes/spots/tower_spot.tscn" id="5_q6r6c"]
[ext_resource type="Script" path="res://scripts/managers/hero_manager.gd" id="7_4d7sh"]
[ext_resource type="PackedScene" path="res://scenes/heroes/ranger_hero.tscn" id="8_ir8iy"]
[ext_resource type="PackedScene" path="res://scenes/spots/hero_spot.tscn" id="9_hqns4"]

[sub_resource type="Curve2D" id="Curve2D_y32ns"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 60, 323, -231.07893, 54.23281, 231.07893, -54.23281, 474, 634, -61.306656, -367.83994, 61.306656, 367.83994, 1081, 212, 0, 0, 0, 0, 1769, 701)
}
point_count = 4

[node name="TestLevel" type="Node2D"]
script = ExtResource("1_level_controller")

[node name="WaveManager" type="Node2D" parent="." node_paths=PackedStringArray("enemy_path", "wave_label")]
script = ExtResource("1_0e48y")
enemy_path = NodePath("../EnemyPath")
goblin_scene = ExtResource("1_wtcfe")
orc_scene = ExtResource("3_epypp")
wolf_scene = ExtResource("3_wolf")
troll_scene = ExtResource("4_troll")
bat_scene = ExtResource("5_bat")
wave_label = NodePath("../UI/WaveLabel")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1000, 600)
zoom = Vector2(0.5, 0.5)
script = ExtResource("2_camera")
default_zoom = 0.6

[node name="EnemyPath" type="Path2D" parent="."]
position = Vector2(5, -2)
curve = SubResource("Curve2D_y32ns")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4_q6r6c")

[node name="WaveLabel" type="Label" parent="UI"]
offset_left = 610.0
offset_top = 13.0
offset_right = 777.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 48
text = "Wave 1"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="UI"]
offset_left = 378.0
offset_top = 13.0
offset_right = 594.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 48
text = "Gold: 500"

[node name="LivesLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 13.0
offset_right = 236.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 48
text = "Lives: 20"

[node name="PlacementManager" type="Node2D" parent="."]
script = ExtResource("5_kdubu")

[node name="TowerSpots" type="Node2D" parent="."]

[node name="TowerSpot1" parent="TowerSpots" instance=ExtResource("5_q6r6c")]
position = Vector2(300, 500)

[node name="TowerSpot2" parent="TowerSpots" instance=ExtResource("5_q6r6c")]
position = Vector2(700, 400)

[node name="TowerSpot3" parent="TowerSpots" instance=ExtResource("5_q6r6c")]
position = Vector2(1200, 600)

[node name="TowerSpot4" parent="TowerSpots" instance=ExtResource("5_q6r6c")]
position = Vector2(1500, 300)

[node name="HeroManager" type="Node2D" parent="."]
modulate = Color(0.9575384, 0.84961164, 0.8779932, 1)
script = ExtResource("7_4d7sh")
ranger_hero_scene = ExtResource("8_ir8iy")

[node name="HeroSpots" type="Node2D" parent="."]

[node name="HeroSpot" parent="HeroSpots" instance=ExtResource("9_hqns4")]
position = Vector2(761, 675)
